<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ublox_utils</name>
    <version>0.0.0</version>
    <description>
        Convertion to ROS2 by Mario Niedermeyer: Repository with ROS tools for the u-blox RTK receiver.
    </description>
    <author>Rik Bähnemann</author>
    <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

    <license>MIT</license>

    <depend>rclcpp</depend>
    <depend>nmea_msgs</depend>
    <depend>ublox_msgs</depend>
    <depend>rtcm_msgs</depend>
    <depend>mavros_msgs</depend>
    <depend>ntrip_client</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>